[package]
name = "smol-quiche"
version = "0.1.0"
authors = ["Aron Tsang <arontsang@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
async-executor = "1.4.0"
async-net = "1.5.0"
async-std = "1.7.0"
crossfire = "0.1.4"
futures-lite = "1.11.2"
multiqueue = "0.3.2"
rental = "0.5.5"
smol = "1.2.5"
quiche = "0.6.0"